--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tslib": "^2.3.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
